--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,3 +1,27 @@
+/* Fonts Config */
+@font-face {
+  font-family: "anton";
+  src: url(./assets/fonts/Anton-Regular.ttf) format("opentype");
+  font-weight: 400;
+  font-style: regular;
+}
+
+@font-face {
+  font-family: "libre baskerville";
+  src: url(./assets/fonts/LibreBaskerville-Regular.ttf) format("opentype");
+  font-weight: 400;
+  font-style: regular;
+}
+
+
+/* General */
+
+* {
+  font-family: "libre baskerville";
+  font-weight: 100;
+  color: black;
+}
+
 .App {
   text-align: center;
 }
@@ -12,6 +36,7 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+
 
 .App-header {
   background-color: #282c34;
@@ -38,8 +63,6 @@
 }
 
 
-
-
 /* NAVBAR */
 .main-nav {
   background-color: white;
@@ -56,7 +79,7 @@
 }
 
 .nav-logo a img {
-  height: 24px;
+  height: 100px;
   float: left;
 }
 
@@ -64,6 +87,7 @@
   padding: 0 0.5em;
   font-size: 1.2em;
   color: black;
+  font-size: 23px;
   text-decoration: none;
 }
 
