--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -144,8 +144,12 @@
 
 .card {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    margin-left: auto;
+    margin-right: auto;
     transition: 0.3s;
     width: 40%;
+    display: block;
+    text-align:center
   }
   
   .card:hover {
