--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -118,20 +118,15 @@ main {
   margin: 0 auto;
 }
 
-/* .blogs-container {
-  border: 2px solid black;
+.blog-container {
+  border: 1px solid black;
   padding: 15px;
-  width: 50%;
+  width: 70%;
   margin: auto;
   margin-bottom: 5em;
-} */
+  text-align: center;
+}
 
-/* 
-.container {
-  width: 50%;
-  float: left;
-  
-} */
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -149,4 +144,19 @@ main {
 
 .container {
   padding: 2px 16px;
+}
+
+.buttons {
+  color: black;
+  padding: 10px;
+  cursor: pointer;
+  width: 50%;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.btn {
+  padding: 8px;
+  margin: 5px;
+  font-size: 15px;
 }
