--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -168,3 +168,34 @@ main {
 .error-pic {
   width: 500px;
 }
+
+/* for mobile devices */
+@media only screen and (max-width: 1000px) {
+  .placeimg {
+    width: 95%;
+  } 
+
+   .nav-logo a img {
+    height : 30px;
+    float: left;
+
+  }
+
+  .nav-link {
+    font-size: 15px;
+  }
+
+  .placeimg2 {
+    width: 70%;
+  }
+
+  .blog-container {
+    block-size: 25%;
+  }
+
+  .Form {
+    width: 75%;
+  }
+
+
+}
