--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -53,7 +53,7 @@ main {
   align-items: center;
   justify-content: space-between;
   padding: 5px;
-  width: 70%;
+  width: 90%;
   margin: auto;
 }
 
@@ -68,6 +68,7 @@ main {
   color: black;
   font-size: 23px;
   text-decoration: none;
+  width: 90%
 }
 
 
