--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -38,7 +38,7 @@ main {
 
 /* NAVBAR */
 .main-nav {
-  background-color: #CDE6F5;
+  background-color: #c6e4f6;
   /* border: 5px solid antiquewhite; */
   overflow: hidden;
   position: fixed; /* Set the navbar to fixed position */
